[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/Options.gd" type="Script" id=2]
[ext_resource path="res://Scenes/util/RangeControl.tscn" type="PackedScene" id=3]

[node name="Options" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 258.0
margin_top = 43.0
margin_right = 765.0
margin_bottom = 557.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 507.0
margin_bottom = 514.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 487.0
margin_bottom = 494.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 60

[node name="Options" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 467.0
margin_bottom = 37.0
text = "options"
align = 1

[node name="SFXVolControl" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 467.0
margin_bottom = 196.0
custom_constants/separation = 176

[node name="SFX" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolControl"]
margin_top = 31.0
margin_right = 69.0
margin_bottom = 68.0
text = "SFX"

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SFXVolControl" instance=ExtResource( 3 )]

[node name="MusicVolControl" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 467.0
margin_bottom = 355.0
custom_constants/separation = 130

[node name="Music" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolControl"]
margin_top = 31.0
margin_right = 115.0
margin_bottom = 68.0
text = "MUSIC"

[node name="RangeControl" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MusicVolControl" instance=ExtResource( 3 )]

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 415.0
margin_right = 467.0
margin_bottom = 474.0
text = "back"
